# 618player

./: Cargo.toml
src/: app.rs  main.rs
src/app/: input.rs  mod.rs  playback.rs  tab_store.rs  tabs.rs
src/app/view/: add_tab_menu.rs  library.rs  mod.rs  playback.rs  tab_strip.rs  top_bar.rs  volume_control.rs  window_frame.rs  workspace.rs
src/settings/: mod.rs
src/theme/: mod.rs
